--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         <h4>Hashtag Generator</h4>
         <p>Generate relevant hashtag ideas for Instagram, YouTube Shorts and Reels.</p>
         <!-- Later you can link this to a dedicated page -->
-        <!-- <p><a href="hashtag-generator.html">Open tool →</a></p> -->
+        <p><a href="hashtag-generator.html">Open tool →</a></p>
       </div>
 
       <div class="card">
