--- a/index.html
+++ b/index.html
@@ -342,11 +342,12 @@
       </div>
 
       <div class="card">
-        <span class="badge">YouTube</span>
-        <h4>YouTube Title Generator</h4>
-        <p>Brainstorm engaging, high-CTR video titles for your channel.</p>
+  <span class="badge">YouTube</span>
+  <h4>YouTube Title Generator</h4>
+  <p>Brainstorm engaging, high-CTR video titles for your channel.</p>
+  <p><a href="/title-generator.html">Open tool →</a></p>
       </div>
-
+      
       <div class="card">
         <span class="badge">Personal Brand</span>
         <h4>Bio & Profile Line Ideas</h4>
